Registro acabado + resultadoOK y Ko acabado + pequeños detalles (falta cuadrar llamada con el back)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,10 @@
     <string name="nombre">Nombre</string>
     <string name="email_pregunta">¿Cuál es tu email?</string>
     <string name="email">Email</string>
-    <string name="start">OK</string>
+    <string name="start">Empezar</string>
+    <string name="volver_intentar">Volver a intentarlo</string>
+    <string name="ko_message">"¡Ups, algo ha salido mal!"</string>
+    <string name="ok_message">"¡Genial, ya estás registrado!"</string>
 
     <string name="telefono">Teléfono</string>
     <string name="contrasenya">Contraseña</string>
