--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,4 +89,5 @@
     <string name="stop_capture">Stop Capture</string>
     <string name="capture">Foto</string>
     <string name="preview_area">Area Preview</string>
+    <string name="descripci_n">Descripción</string>
 </resources>
